@@ -79,6 +79,7 @@ import org.jowidgets.cap.ui.api.model.DataModelContext;
 import org.jowidgets.cap.ui.api.model.IBeanListModelBeansListener;
 import org.jowidgets.cap.ui.api.model.IBeanListModelListener;
 import org.jowidgets.cap.ui.api.model.IDataModelContext;
+import org.jowidgets.cap.ui.api.model.IDataSaveListener;
 import org.jowidgets.cap.ui.api.model.IModificationStateListener;
 import org.jowidgets.cap.ui.api.model.IProcessStateListener;
 import org.jowidgets.cap.ui.api.model.ISingleBeanModel;
@@ -411,6 +412,16 @@ final class SingleBeanModelImpl<BEAN_TYPE> implements ISingleBeanModel<BEAN_TYPE
 	@Override
 	public void save() {
 		saveDelegate.save();
+	}
+
+	@Override
+	public void addDataSaveListener(final IDataSaveListener dataSaveListener) {
+		saveDelegate.addDataSaveListener(dataSaveListener);
+	}
+
+	@Override
+	public void removeDataSaveListener(final IDataSaveListener dataSaveListener) {
+		saveDelegate.removeDataSaveListener(dataSaveListener);
 	}
 
 	@Override
